@@ -4,6 +4,12 @@ Revision history for Perl extension IPC::Shareable.
     - Remove erroneous listing from MANIFEST
     - Work around issue in t/65-seg_size.t where MacOS and FreeBSD don't have
       the -i flag to ipcs (thanks for the PR, Roland Walker!)
+    - Added singleton(), ensures that only a single instance of a script can
+      run at any given time
+    - Added tests to ensure we croak() if create is not set and the segment
+      doesn't yet exist
+    - Fix POD issue where we stated exclusive returns undef instead of croaking
+      (fixes #10)
 
 1.01    2021-06-24
     - Added 'graceful' flag option. With exclusive, if a second process
